--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "firebase": "^8.4.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-context-devtool": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-mailchimp-form": "^1.0.2",
